--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.4",
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
